# af

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  flake.nix  mise.toml  renovate.json
.cargo/: config.toml
.github/: sync-config.yml
.github/api/: graphql.config.yaml
.github/api/queries/: createCommit.graphql  createRef.graphql
.github/scripts/: _common.bash  bump-cargo.bash  commit-tag-version.bash  debug-shell.bash  debug.bash
.github/workflows/: __bump-and-build.yaml  __bump-and-build.yml  bump-and-build.yaml  bump-version.yaml  debug.yaml  nix.yaml  nix.yml  pr-commands.yml  release-artifacts.yaml  release-new-version.yaml  release.yaml  release.yml  schedule.yaml  sync-trigger.yml  test-and-build.yml  test.yaml  test.yml  trigger-bump.yaml  trigger-bump.yml
af-alfred-workflow/: Cargo.toml
af-alfred-workflow/src/: main.rs
af-alfred-workflow/workflow/: info.plist
docs/: af.md
src/: ides.rs  main.rs
src/af/: consts.rs  ides.rs  lib.rs  repo.rs  utils.rs
src/af/cmd/: dot.rs  mod.rs
src/af/cmd/browser/: mod.rs  structures.rs
src/af/cmd/git/: mod.rs
src/af/cmd/git/clone_project/: mod.rs
src/af/cmd/shortcuts/abbreviations/: mod.rs
xtasks/genman/: Cargo.toml
xtasks/genman/src/: main.rs
xtasks/genmd/: Cargo.toml
xtasks/genmd/src/: main.rs
