[workspace]
resolver = "3"
members = ["af-alfred-workflow", "xtasks/*"]

[workspace.package]
version = "0.8.35"
edition = "2024"
repository = "https://github.com/smykla-labs/af"
license = "MIT"

[workspace.dependencies]
af = { path = "" }
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive", "env", "string", "wrap_help"] }
clap-verbosity-flag = "3.0.2"
clap_complete_command = "0.6.1"
cli-clipboard = "0.4.0"
clio = { version = "0.3.5", features = ["clap-parse"] }
console = "0.16.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
fern = { version = "0.7.1", features = ["colored"] }
git2 = "0.20.0"
glob = "0.3.2"
humantime = "2.1.0"
indicatif = "0.18.0"
indicatif-log-bridge = "0.2.3"
log = "0.4.26"
octocrab = "0.49.0"
phf = { version = "0.13.0", features = ["macros"] }
rayon = "1.10.0"
regex = "1.11.1"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["rt", "rt-multi-thread", "macros"] }
url = "2.5.4"

[package]
name = "af"
version = "0.8.35"
edition = "2024"
repository = "https://github.com/smykla-labs/af"
license = "MIT"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
clap_complete_command.workspace = true
cli-clipboard.workspace = true
clio.workspace = true
console.workspace = true
dialoguer.workspace = true
fern.workspace = true
git2.workspace = true
glob.workspace = true
humantime.workspace = true
indicatif.workspace = true
indicatif-log-bridge.workspace = true
log.workspace = true
octocrab.workspace = true
phf.workspace = true
rayon.workspace = true
regex.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[lib]
name = "af"
path = "src/af/lib.rs"

[[bin]]
name = "af"
test = false
doc = false

[dev-dependencies]
tempfile = "=3.23.0"
